[metadata]
name = asv-github
summary =  A wsgi server to run benchmarks triggered by github pushes
description-file =
    README.md
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    asv_github

[entry_points]
console_scripts =
    asv-server = asv_github.api:main

wsgi_scripts =
    asv-api = asv_github.api:main
